<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Test2">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_chevron_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_transferDescription"
        style="@style/Pay_TextView_LargeBoldBlack_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="54dp"
        android:text="@string/fr_transfer_money_sendDescription"
        app:layout_constraintStart_toEndOf="@+id/img_back"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transferDescription"
        app:strokeColor="@color/light_blue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/pic_person1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_person_name"
                style="@style/Pay_TextView_SmallBoldBlack_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/fr_transfer_money_tv_person_name"
                app:layout_constraintStart_toEndOf="@+id/img_person"
                app:layout_constraintTop_toTopOf="@+id/img_person" />

            <TextView
                android:id="@+id/tv_account"
                style="@style/Pay_TextView_XSmallGray_300"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fr_transfer_money_tv_account"
                app:layout_constraintStart_toStartOf="@+id/tv_person_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_person_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--    app:layout_constraintBottom_toTopOf="@+id/cl_num_two"-->
    <EditText
        android:id="@+id/et_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="보낼 금액"
        android:text=""
        android:textColor="@color/black_200"
        android:textColorHint="@color/gray_100"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_num_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <!-- 첫번째 키패드 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_one"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_one"
        app:layout_constraintBottom_toTopOf="@+id/btn_num_four"
        app:layout_constraintEnd_toStartOf="@+id/btn_num_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_two"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_two"
        app:layout_constraintEnd_toStartOf="@+id/btn_num_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_num_one"
        app:layout_constraintTop_toTopOf="@+id/btn_num_one" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_three"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_num_two"
        app:layout_constraintTop_toTopOf="@+id/btn_num_one" />

    <!-- 두번째 키패드 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_four"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_four"
        app:layout_constraintBottom_toTopOf="@+id/btn_num_seven"
        app:layout_constraintEnd_toStartOf="@+id/btn_num_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_five"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_five"
        app:layout_constraintEnd_toStartOf="@+id/btn_num_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_num_four"
        app:layout_constraintTop_toTopOf="@+id/btn_num_four" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_six"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_num_five"
        app:layout_constraintTop_toTopOf="@+id/btn_num_four" />

    <!-- 세번째 키패드 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_seven"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_seven"
        app:layout_constraintBottom_toTopOf="@+id/btn_num_double_zero"
        app:layout_constraintEnd_toStartOf="@+id/btn_num_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_eight"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_eight"
        app:layout_constraintEnd_toStartOf="@+id/btn_num_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_num_seven"
        app:layout_constraintTop_toTopOf="@+id/btn_num_seven" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_nine"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_num_eight"
        app:layout_constraintTop_toTopOf="@+id/btn_num_seven" />

    <!-- 네번째 키패드 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_double_zero"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_double_zero"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirmed"
        app:layout_constraintEnd_toStartOf="@+id/btn_num_zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num_zero"
        style="@style/Pay_Button_XLargeBoldBlack_200"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_button_click"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fr_transfer_money_btn_num_zero"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_num_double_zero"
        app:layout_constraintTop_toTopOf="@+id/btn_num_double_zero" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_button_click"
        android:drawableBottom="@drawable/icon_delete"
        android:paddingBottom="12dp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_num_zero"
        app:layout_constraintTop_toTopOf="@+id/btn_num_double_zero" />

    <Button
        android:id="@+id/btn_confirmed"
        style="@style/Pay_Button_MiddleBold"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@drawable/selector_button_background"
        android:enabled="false"
        android:text="@string/fr_transfer_money_btn_confirmed"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>

